--- a/services/users/cwp_theme/rvtheme/mod_permi_rv.html
+++ b/services/users/cwp_theme/rvtheme/mod_permi_rv.html
@@ -38,6 +38,7 @@
     </div>
 </div>
 {% endif %}
+<a href="https://github.com/rv8979/permission_reset_module_for_cwp" target="_blank">github.com/rv8979</a>
 <!--/////////////////////////////////////////-->
 <!--stop dash board panel-->
 
